--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "starter-laravel-mix",
+  "name": "Самарские автомобили",
   "version": "1.0.0",
-  "description": "Simple starter using Laravel Mix",
+  "description": "Самарские автомобили",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
