--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "sass-loader": "^12.2.0",
     "swiper": "^7.2.0",
     "tailwindcss": "^2.2.17"
+  },
+  "dependencies": {
+    "alpinejs": "^3.7.1"
   }
 }
