fix "Error: ENOENT: no such file or directory"
оказывается он не знал где mix-manifest обновлять

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/dist/js/scripts.js": "/dist/js/scripts.js",
-    "/dist/css/styles.css": "/dist/css/styles.css"
+    "/dist/js/scripts.js": "/dist/js/scripts.js?id=5ccd117799fe0cff82b7",
+    "/dist/css/styles.css": "/dist/css/styles.css?id=7a4bdce90f866a57c7ce"
 }
