--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/dist/js/scripts.js": "/dist/js/scripts.js",
-    "/dist/css/styles.css": "/dist/css/styles.css"
+    "/dist/js/scripts.js": "/dist/js/scripts.js?id=1eb73aad9e45f5497b4a",
+    "/dist/css/styles.css": "/dist/css/styles.css?id=d216310c7221adc6bf45"
 }
