added autoplay to slider

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/dist/js/scripts.js": "/dist/js/scripts.js?id=dcc8ce5608f5562d5a7c",
-    "/dist/css/styles.css": "/dist/css/styles.css?id=92e141fea4c7575d2d4b"
+    "/dist/js/scripts.js": "/dist/js/scripts.js",
+    "/dist/css/styles.css": "/dist/css/styles.css"
 }
