--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/assets/js/scripts.js": "/assets/js/scripts.js?id=111350c9188d93df44e2",
-    "/assets/css/styles.css": "/assets/css/styles.css?id=7ecdc57e57bc24418be5"
+    "/assets/js/scripts.js": "/assets/js/scripts.js",
+    "/assets/css/styles.css": "/assets/css/styles.css"
 }
