--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/assets/js/scripts.js": "/assets/js/scripts.js",
-    "/assets/css/styles.css": "/assets/css/styles.css"
+    "/assets/js/scripts.js": "/assets/js/scripts.js?id=c875583a592b865ebcb1",
+    "/assets/css/styles.css": "/assets/css/styles.css?id=3a8e95ad3129f7bc5580"
 }
