--- a/public/Gemfile
+++ b/public/Gemfile
@@ -7,7 +7,10 @@ source "https://rubygems.org"
 #
 # This will help ensure the proper Jekyll version is running.
 # Happy Jekylling!
-gem "jekyll", "~> 4.2.2"
+
+# For local development uncomment "gem "jekyll"" below and 
+# comment "gem "github-pages"" then run `bundle update`
+gem "jekyll", "~> 4.3.2"
 
 # If you want to use GitHub Pages, remove the "gem "jekyll"" above and
 # uncomment the line below. To upgrade, run `bundle update github-pages`.
@@ -17,9 +20,6 @@ group :jekyll_plugins do
   gem "jekyll-feed", "~> 0.12"
   gem "jekyll-seo-tag"
 end
-
-gem 'jekyll-sitemap', group: [:jekyll_plugins]
-# gem 'jekyll-admin', group: :jekyll_plugins
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
 # and associated library.
@@ -31,4 +31,10 @@ end
 # Performance-booster for watching directories on Windows
 gem "wdm", "~> 0.1.1", :platforms => [:mingw, :x64_mingw, :mswin]
 
+gem 'jekyll-sitemap', group: [:jekyll_plugins]
+# gem 'jekyll-admin', group: :jekyll_plugins
+
+# Lock `http_parser.rb` gem to `v0.6.x` on JRuby builds since newer versions of the gem
+# do not have a Java counterpart.
+gem "http_parser.rb", "~> 0.6.0", :platforms => [:jruby]
 gem "webrick", "~> 1.8"
