--- a/.github/workflows/action-pages.yml
+++ b/.github/workflows/action-pages.yml
@@ -13,7 +13,8 @@ on:
       - completed
   # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
+    branches:
+      - "astro"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
