--- a/.github/workflows/github-telegram.yml
+++ b/.github/workflows/github-telegram.yml
@@ -18,10 +18,6 @@ on:
         description: 'Additional text passed from the caller workflow'
         required: false
         type: string
-      commits:
-        description: 'Commits information from the caller workflow'
-        required: false
-        type: string
     secrets:
       TELEGRAM_TO:
         description: 'Telegram ID passed from the caller workflow'
@@ -35,7 +31,7 @@ jobs:
   # This workflow contains a job called "build" adn "log-github-event-goodies"
   push:
 
-    if: ${{ github.event.commits != null }}
+    if: ${{ github.event.commits != null && inputs.additional-text == null }}
 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -54,9 +50,9 @@ jobs:
         id: with_commits
         run: |
           if [ "${{ github.event.before }}" == "0000000000000000000000000000000000000000" ]; then
-            git fetch origin master
-            git checkout master
-            mapfile -t COMMITS_ARRAY < <(git log --pretty=format:"'<code>%h</code>' - %an, %ar : %s" master..${{ github.sha }})
+            git fetch origin HEAD
+            git checkout HEAD
+            mapfile -t COMMITS_ARRAY < <(git log --pretty=format:"'<code>%h</code>' - %an, %ar : %s" HEAD..${{ github.sha }})
             echo "before=${{ github.sha }}" >> $GITHUB_OUTPUT
           else
             mapfile -t COMMITS_ARRAY < <(git log --pretty=format:"'<code>%h</code>' - %an, %ar : %s" ${{ github.event.before }}..${{ github.sha }})
@@ -173,7 +169,7 @@ jobs:
             branch '`${{ github.event.ref }}`' is deleted
 
   get_last_commit:
-    if: ${{ inputs.commits != null }}
+    if: ${{ inputs.additional-text != null }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -196,11 +192,19 @@ jobs:
         id: set_outputs
         # The part of this solution to focus on is that we’re substituting the %, \n, and \r characters
         run: |
-          additional_text="${{ inputs.additional-text || '' }}"
+          additional_text=$(echo "${{ inputs.additional-text || '' }}" | base64 -d)
           if [ "$additional_text" != "" ]; then
+            # Форматируем текст с переносами строк
+            additional_text=$(echo -e "$additional_text")
+            
+            # Debug: print the formatted text
+            echo "Formatted additional_text:"
+            echo "$additional_text"
+            
             echo "additional_text<<EOF" >> $GITHUB_OUTPUT
             echo "" >> $GITHUB_OUTPUT
-            echo $additional_text >> $GITHUB_OUTPUT
+            echo "<pre>$additional_text" >> $GITHUB_OUTPUT
+            echo "</pre>" >> $GITHUB_OUTPUT
             echo "" >> $GITHUB_OUTPUT
             echo "EOF" >> $GITHUB_OUTPUT
           fi
